--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,7 +11,6 @@
  * file per style scope.
  *
 
-
  *= require_tree .
  *= require_self
 
@@ -247,6 +246,48 @@ ITEM EDIT FORM
 }
 
 /*
+WALLET INDEX
+*/
+.add-wallet-wrapper {
+  span {
+    position: relative;
+    top: -4px;
+  }
+  .btn {
+    padding: 0 1.0rem;
+  }
+}
+#pub_qrcode img,
+#priv_qrcode img {
+  margin:0 auto;
+}
+.public_address,
+.private_key {
+  text-align: center;
+  font-size: 8px;
+}
+
+.public_key_wrapper {
+  margin-bottom: 10px;
+  padding: 5px;
+  p, h4 {
+    text-align: center;
+  }
+}
+.wallet-btns {
+  display: block;
+  margin: 10px auto;
+  width: 78px;
+}
+.private_key_wrapper {
+  padding: 25px 5px 5px 5px;
+  p {
+    text-align: center
+  }
+}
+
+
+/*
 MEDIA QUERIES
 */
 @media (max-width: 992px) {
@@ -318,6 +359,13 @@ MEDIA QUERIES
     text-align: center;
     .rate-wrapper {
       position: static;
+      span {
+        font-size: 10px;
+      }
+      .rate {
+        position: relative;
+        left: -36px;
+      }
     }
   }
   .landing-cta {
