--- a/app/views/static_pages/partials/_contact.html.erb
+++ b/app/views/static_pages/partials/_contact.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
-        <img src="https://placehold.it/250x250" alt="" />
+        <img src="http://s10.postimg.org/athl9f8gp/AAEAAQAAAAAAAAKKAAAAJDdi_ZTk2_Yz_Rl_LTI4_Yz_At_NDdi_YS04.jpg" alt="" />
         <h5>Max Plisskin</h5>
         <h5>Full Stack | DevOps</h5>
         <p>
@@ -10,7 +10,7 @@
         </p>
       </div>
       <div class="col l6 s12">
-        <img src="https://placehold.it/250x250" alt="" />
+        <img src="http://s22.postimg.org/chlp9pyi9/Optimized_IMG_8697.jpg" alt="" />
         <h5>Samuel Chun</h5>
         <h5>Full Stack | FrontEnd | Mobile</h5>
         <p>
