--- a/app/views/static_pages/partials/_promo.html.erb
+++ b/app/views/static_pages/partials/_promo.html.erb
@@ -2,19 +2,19 @@
   <div class="container">
     <div class="row">
       <div class="col l4 s12">
-        <img src="https://placehold.it/200x200" alt="" />
+        <i class="material-icons large">account_balance_wallet</i>
         <h5>
           Generate Bitcoin wallets or submit your own.
         </h5>
       </div>
       <div class="col l4 s12">
-        <img src="https://placehold.it/200x200" alt="" />
+        <i class="material-icons large">local_offer</i>
         <h5>
           Assign wallets to items to keep track of purchases.
         </h5>
       </div>
       <div class="col l4 s12">
-        <img src="https://placehold.it/200x200" alt="" />
+        <i class="material-icons large">map</i>
         <h5>
           Become locally recognized for accepting Bitcoin.
         </h5>
