--- a/app/views/static_pages/partials/_contact.html.erb
+++ b/app/views/static_pages/partials/_contact.html.erb
@@ -8,6 +8,17 @@
         <p>
           Ruby on Rails, Digital Ocean, Nginx, Sidekiq, jQuery
         </p>
+        <div class="contact-link-wrapper">
+          <span>
+            <i class="material-icons">web</i>
+          </span>
+          <span>
+            <img class="github" src="http://s30.postimg.org/qso2pcpil/Git_Hub_Mark_64px.png" alt="" />
+          </span>
+          <span>
+            <img class="linkedin" src="http://s29.postimg.org/x4b0oyys3/In_2_C_75px_R.png" alt="" />
+          </span>
+        </div>
       </div>
       <div class="col l6 s12">
         <img src="http://s22.postimg.org/chlp9pyi9/Optimized_IMG_8697.jpg" alt="" />
@@ -16,6 +27,23 @@
         <p>
           AngularJS, Ionic Framework, Ruby on Rails, jQuery, MaterializeCSS
         </p>
+        <div class="contact-link-wrapper">
+          <span>
+            <a href="http://www.samchuns.com">
+              <i class="material-icons">web</i>
+            </a>
+          </span>
+          <span>
+            <a href="http://www.github.com/ephapox">
+              <img class="github" src="http://s30.postimg.org/qso2pcpil/Git_Hub_Mark_64px.png" alt="" />
+            </a>
+          </span>
+          <span>
+            <a href="http://www.linkedin.com/in/chunresolved">
+              <img class="linkedin" src="http://s29.postimg.org/x4b0oyys3/In_2_C_75px_R.png" alt="" />
+            </a>
+          </span>
+        </div>
       </div>
     </div>
   </div>
