--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -154,6 +154,7 @@ $landing-overlay: rgba(35, 35, 50, 0.6);
     .github {
       width: 25px;
       height: 25px;
+      margin: 0 10px;
     }
     .linkedin {
       width: 30px;
