--- a/app/views/static_pages/partials/_contact.html.erb
+++ b/app/views/static_pages/partials/_contact.html.erb
@@ -10,13 +10,19 @@
         </p>
         <div class="contact-link-wrapper">
           <span>
+            <a href="http://www.maxplisskin.com/">
             <i class="material-icons">web</i>
+            </a>
           </span>
           <span>
+            <a href="https://github.com/mmplisskin">
             <img class="github" src="http://s30.postimg.org/qso2pcpil/Git_Hub_Mark_64px.png" alt="" />
+            </a>
           </span>
           <span>
+            <a href="https://www.linkedin.com/in/maxplisskin">
             <img class="linkedin" src="http://s29.postimg.org/x4b0oyys3/In_2_C_75px_R.png" alt="" />
+            </a>
           </span>
         </div>
       </div>
