--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -96,14 +96,16 @@ NAVBAR
 LANDING PAGE
 */
 $landing-promo: #eceff1;
-$landing-contact: #fbe9e7;
+$landing-contact: #efebe9;
 $landing-overlay: rgba(35, 35, 50, 0.6);
 
 .landing-cta,
-.landing-promo,
-.landing-contact {
+.landing-promo {
   height: 100vh;
   width: 100vw;
+}
+.landing-contact {
+  height: 90vh;
 }
 .cta-overlay {
   height: 100%;
