styles add wallet form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -245,14 +245,7 @@ BUSINESS SHOW
 }
 
 /*
-ITEM FORM
-*/
-.item-image-submit {
-  margin: 20px 0;
-}
-
-/*
-ITEM EDIT FORM
+FORMS
 */
 .edit-form-wrapper {
   margin-top: 35px;
@@ -263,6 +256,14 @@ ITEM EDIT FORM
   margin-top: 35px;
   margin-bottom: 50px;
   width: 60vw;
+}
+
+.add-wallet-form {
+  margin-top: 35px;
+  width: 60vw;
+}
+.item-image-submit {
+  margin: 20px 0;
 }
 
 /*
