--- a/app/views/wallets/new.html.erb
+++ b/app/views/wallets/new.html.erb
@@ -1,5 +1,3 @@
-<div class="ui four column doubling grid container">
-<div class="ui text container">
-<%= render 'layouts/wallet_form' %>
-</div>
+<div class="add-wallet-form container">
+<%= render 'layouts/forms/add_wallet_form' %>
 </div>
