--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,16 @@
 
 
 /*
- *= require rails_bootstrap_forms
+SASS VARIABLES
+BUTTONS
+GENERAL
+NAVBAR
+LANDING PAGE
+LOCATIONS PAGE
+BUSINESS SHOW
+FORMS
+WALLET INDEX
+MEDIA QUERIES
 */
 
 @import "materialize";
