--- a/app/views/layouts/modals/_modal_signup.html.erb
+++ b/app/views/layouts/modals/_modal_signup.html.erb
@@ -1,6 +1,8 @@
 <div id="signup-modal" class="modal modal-fixed-footer">
   <div class="modal-content">
     <h4>Sign Up</h4>
+    <!-- <div class="alert alert-warning" style="display:none;" id="sinUpAlert"> -->
+
     <%= form_for @business do |f| %>
       <div class="">
         <%= f.label :name %>
