validates name and email

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -414,3 +414,14 @@ MEDIA QUERIES
     }
   }
 }
+
+
+
+/*
+SIGN Up ALERTS
+*/
+#toast-container {
+    min-width: 8%;
+    top: -1%;
+    right: 2%;
+}
