--- a/app/views/layouts/modals/_modal_signup.html.erb
+++ b/app/views/layouts/modals/_modal_signup.html.erb
@@ -30,18 +30,18 @@
       </div>
       <div class="">
         <%= f.label :description %>
-        <%= f.text_area :description, placeholder:'A brief description of your business', class:"materialize-textarea" %>
+        <%= f.text_area :description, placeholder:'A brief description of your business', class:"materialize-textarea", id:'description' %>
       </div>
       <div class="">
         <%= f.collection_select :category_id, Category.order(:name), :id, :name, include_blank: false %>
       </div>
       <div class="">
         <%= f.label :phone_number %>
-        <%= f.telephone_field :phone_number, :maxlength => 10, :size => 15, placeholder:'(555)555-5555' %>
+        <%= f.telephone_field :phone_number, :maxlength => 10, :size => 15, placeholder:'(555)555-5555', id:'phone' %>
       </div>
       <div class="">
         <%= f.label :password %>
-        <%= f.password_field :password, placeholder:'Password' %>
+        <%= f.password_field :password, placeholder:'Password', id: 'password' %>
       </div>
       <div class="">
         <%= f.label :password_confirmation %>
