--- a/app/views/layouts/modals/_modal_signup.html.erb
+++ b/app/views/layouts/modals/_modal_signup.html.erb
@@ -41,11 +41,11 @@
       </div>
       <div class="">
         <%= f.label :password %>
-        <%= f.password_field :password, placeholder:'Password', id: 'password' %>
+        <%= f.password_field :password, placeholder:'Password', id:'password' %>
       </div>
       <div class="">
         <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation, placeholder:'Confirm Password' %>
+        <%= f.password_field :password_confirmation, placeholder:'Confirm Password', id:'passwordconf' %>
       </div>
   </div>
   <div class="modal-footer">
