--- a/app/views/static_pages/partials/_contact.html.erb
+++ b/app/views/static_pages/partials/_contact.html.erb
@@ -4,9 +4,9 @@
       <div class="col l6 s12">
         <img src="//i.imgur.com/16U9nm4.jpg" alt="" />
         <h5>Max Plisskin</h5>
-        <h5>Full Stack | DevOps</h5>
+        <h5>Full Stack | Product Development | DevOps</h5>
         <p>
-          Ruby on Rails, Js/jQuery, API, Product design, Deployment
+          Ruby on Rails, Js jQuery, API, Design , Deployment
         </p>
         <div class="contact-link-wrapper">
           <span>
@@ -31,7 +31,7 @@
         <h5>Samuel Chun</h5>
         <h5>Full Stack | FrontEnd | Mobile</h5>
         <p>
-          AngularJS, Ionic Framework, Ruby on Rails, jQuery, MaterializeCSS
+          AngularJS, Ionic Framework, Ruby on Rails, Js jQuery, MaterializeCSS
         </p>
         <div class="contact-link-wrapper">
           <span>
