--- a/app/views/static_pages/partials/_promo.html.erb
+++ b/app/views/static_pages/partials/_promo.html.erb
@@ -4,19 +4,19 @@
       <div class="col l4 s12">
         <i class="material-icons large">account_balance_wallet</i>
         <h5>
-          Generate Bitcoin wallets or submit your own.
+          Create a Bitcoin compatible storefront.
         </h5>
       </div>
       <div class="col l4 s12">
         <i class="material-icons large">local_offer</i>
         <h5>
-          Assign wallets to items to keep track of purchases.
+          List Items and manage or generate wallets.
         </h5>
       </div>
       <div class="col l4 s12">
         <i class="material-icons large">map</i>
         <h5>
-          Become locally recognized for accepting Bitcoin.
+          Receive bitcoins for your goods instantly.
         </h5>
       </div>
     </div>
