--- a/app/views/static_pages/partials/_contact.html.erb
+++ b/app/views/static_pages/partials/_contact.html.erb
@@ -4,9 +4,9 @@
       <div class="col l6 s12">
         <img src="//i.imgur.com/16U9nm4.jpg" alt="" />
         <h5>Max Plisskin</h5>
-        <h5>Full Stack | Product Development | DevOps</h5>
+        <h5>Full Stack | Deployment</h5>
         <p>
-          Ruby on Rails, Js jQuery, API, Design , Deployment
+          Ruby on Rails, Js jQuery, API, Product development
         </p>
         <div class="contact-link-wrapper">
           <span>
