--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -3,11 +3,11 @@
     <div class="nav-wrapper container">
       <span class="rate-wrapper">
         <span class="rate-title">Average</span>
-        <span class="rate"><%= current_rate.average_rate %></span>
+        <span class="rate" id="average">$ <%= current_rate.average_rate %></span>
         <span class="rate-title">Coinbase</span>
-        <span class="rate"><%= current_rate.coinbase_rate %></span>
+        <span class="rate" id="coinbase">$ <%= current_rate.coinbase_rate %></span>
         <span class="rate-title">Bitfinex</span>
-        <span class="rate"><%= current_rate.bitfinex_rate %></span>
+        <span class="rate" id="bitfinex">$ <%= current_rate.bitfinex_rate %></span>
         <!-- <span class="rate-title">Ok Coin</span>
         <span class="rate"><%= current_rate.okcoin_rate %></span> -->
       </span>
