adds my acc btn on landing page

--- a/app/views/static_pages/partials/_cta.html.erb
+++ b/app/views/static_pages/partials/_cta.html.erb
@@ -7,6 +7,8 @@
       </h4>
       <% if !current_business %>
       <a href="#signup-modal" class="modal-trigger wave-effect waves-light btn btn-blue">Sign Up</a>
+      <% else %>
+      <a href="/businesses/<%= current_business.id %>" class="wave-effect waves-light btn btn-blue">My Account</a>
       <% end %>
     </div>
   </div>
