--- a/app/views/wallets/index.html.erb
+++ b/app/views/wallets/index.html.erb
@@ -19,13 +19,14 @@
         <p class="public_address">
           <%= wallet.wallet_address %>
         </p>
-        <div class="wallet-btns">
-          <% if wallet.private_key %>
-          <button class="private_key_button wave-effect waves-light btn btn-floating tooltipped" data-position="top" data-tooltip="Show private key">
-            <i class="material-icons">vpn_key</i>
+         <div class="wallet-btns">
+          <%# if wallet.private_key %>
+          <!-- class="private_key_button" -->
+          <button class="wave-effect waves-light btn btn-floating tooltipped" data-position="top" data-tooltip="withdraw">
+            <i class="material-icons">input</i>
           </button>
-          <% end %>
-          <a href="/wallets/<%= wallet.id %>" rel="nofollow" data-method="delete" data-confirm="Are you sure? Make sure you have your private key!" class="btn-floating wave-effect waves-light btn-red tooltipped" data-position="top" data-delay="10" data-tooltip="Delete Wallet"><i class="material-icons">delete</i></a>
+          <%# end %>
+          <a href="/wallets/<%#= wallet.id %>" rel="nofollow" data-method="delete" data-confirm="Are you sure? Make sure you have your private key!" class="btn-floating wave-effect waves-light btn-red tooltipped" data-position="top" data-delay="10" data-tooltip="Delete Wallet"><i class="material-icons">delete</i></a>
         </div>
         <% if wallet.name %>
         <p><%= wallet.name %></p>
